# FPS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
assets/maps/: arena01.glb
assets/weapons/: rifle.cfg
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
deploy/: Caddyfile  fps-server.service
docs/: architecture.md  build.md  coding-standards.md  deploy.md  milestones.md  networking.md  packet-format.md  physics.md  rendering.md
docs/decisions/: 0001-technology-stack.md  0002-authoritative-server.md  0003-opengl-4-1-baseline.md  0004-character-controller.md  0005-web-client.md  README.md
engine/: CMakeLists.txt
engine/assets/: asset_cache.cpp  asset_cache.h  gltf_loader.cpp  gltf_loader.h  paths.cpp  paths.h
engine/audio/: audio_engine.cpp  audio_engine.h
engine/core/: assert.h  log.cpp  log.h  time.cpp  time.h  version.cpp  version.h
engine/debug/: imgui_layer.cpp  imgui_layer.h
engine/net/: byte_buffer.cpp  byte_buffer.h  client_transport.cpp  client_transport.h  composite_transport.cpp  composite_transport.h  transport.cpp  transport.h  websocket_host.cpp  websocket_host.h
engine/physics/: character_controller.cpp  character_controller.h  physics_internal.h  physics_world.cpp  physics_world.h
engine/platform/: input.cpp  input.h  window.cpp  window.h
engine/rendering/: camera.cpp  camera.h  debug_draw.cpp  debug_draw.h  gl.h  gl_util.cpp  gl_util.h  gpu_mesh.cpp  gpu_mesh.h  mesh_data.cpp  mesh_data.h  shader.cpp  shader.h  texture.cpp  texture.h
engine/scene/: scene.cpp  scene.h  transform.cpp  transform.h
game/: CMakeLists.txt
game/client/: fly_camera.h  main.cpp  net_client.cpp  net_client.h
game/server/: main.cpp  server_game.cpp  server_game.h
game/shared/: health.h  hitscan.h  input_command.h  interpolation.cpp  interpolation.h  lag_comp.h  player_movement.cpp  player_movement.h  prediction.cpp  prediction.h  protocol.cpp  protocol.h  weapon.cpp  weapon.h
scripts/: build_web.sh  package.sh
tests/: CMakeLists.txt
tests/assets/: gltf_loader_tests.cpp  paths_tests.cpp
tests/core/: input_tests.cpp  log_tests.cpp  time_tests.cpp  version_tests.cpp
tests/game/: hitscan_tests.cpp  interpolation_tests.cpp  lag_comp_tests.cpp  player_movement_tests.cpp  prediction_tests.cpp  weapon_tests.cpp
tests/net/: byte_buffer_tests.cpp  composite_transport_tests.cpp  protocol_tests.cpp  transport_tests.cpp
tests/rendering/: camera_tests.cpp  mesh_data_tests.cpp
tests/scene/: scene_tests.cpp
tools/: gen_arena.py  gen_sounds.py  ws_smoke.py
web/: shell.html  vercel.json
